--- a/WEEK 3/week3.html
+++ b/WEEK 3/week3.html
@@ -5,14 +5,13 @@
 <title>Module 3</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/coursera" type="text/css" media=screen>
+ 
 
 </head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="coursera/WEEK 3/styles.css" type="text/css" media=screen>
+<link rel="stylesheet" type="text/css" href="style.css">
 
 
 
