--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="coursera/WEEK 3/styles.css" type="text/css" media=screen>
+  <link rel="stylesheet" href="coursera/styles.css" type="text/css" media=screen>
 
 
 
